--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -1,7 +1,7 @@
-<!-- Title: appointment.html
+<!-- Title: profile.html
   Author: April Yang
-  Date: 07/14/2022
-  Description: Appointment page of Pets-R-Us site.  -->
+  Date: 07/23/2022
+  Description: profile page of Pets-R-Us site.  -->
 
 <!DOCTYPE html>
 <html lang="en">
@@ -16,11 +16,11 @@
     <!-- import navbar and header -->
     <navbar><%- include('./partials/navbar'); %></navbar>
     <header><%- include('./partials/header'); %></header>
-    <!-- sign up card with form -->
+
     <section class="container signUpContainer" style="margin-bottom: 300px">
       <div class="card">
         <h1 class="card-title"><%= cardTitle %></h1>
-
+        <!-- logged in user name and email -->
         <ul style="text-align: left; padding-left: 20px">
           <% if(currentUser) { %>
           <br />
@@ -29,7 +29,7 @@
           <% } %>
         </ul>
 
-        <!-- loop over every user sign in with username, email, and createdAt -->
+        <!-- displaying logged in user's appointments  -->
         <div id="appointments"></div>
       </div>
     </section>
@@ -39,7 +39,7 @@
         .then((res) => res.json())
         .then((data) => {
           let tableString = `<br /><h4 style="font-size: 32px; text-align: center; padding-bottom: 10px;">My Appointments</h4><table id="appointments" class="table"><tr><th>First name</th><th>Last name</th><th>Email</th><th>Service</th></tr>`;
-
+          // loop over appointment with user's firstName, lastName, email, and services
           for (let appointment of data) {
             tableString += `<tr><td>${appointment.firstName}</td><td>${appointment.lastName}</td><td>${appointment.email}</td><td>${appointment.services}</td></tr>`;
           }
